TM-13284 - Fixed style on the header causing overlaps of the menu items

--- a/src/main/webapp/tds/web-app/css/layout/top-nav.sass
+++ b/src/main/webapp/tds/web-app/css/layout/top-nav.sass
@@ -39,6 +39,7 @@
     .menu-top-container
       height: auto
   .navbar-header
+    float: left
     .navbar-toggle
       float: left !important
   @media (min-width: 1200px)
